test/invalid/baseline/iterable-notype.txt
Syntax error at line 2 in iterable-notype.widl, since `interface X`:
    iterable;
            ^ Missing less-than sign `<` in iterable declaration
